Fixed mobile layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -127,6 +127,7 @@ input[type="text"] {
     width: 85%;
     text-align: center;
     align-items: center;
+    transform: translateX(-50%) translateY(-20%); 
   }
 
   .info_container div {
